dead boss is now black and white, solve bug on fights log with overflow hidden

--- a/src/App.css
+++ b/src/App.css
@@ -109,6 +109,10 @@
 
   .order-list{ grid-area: 1 / 1 / 2 / 2 ; }
   .fight-logs {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: start;
+    justify-content: end;
     font-family: monospace;
     font-size: small;
     grid-area: 2 / 1 / 3 / 2 ;
@@ -117,6 +121,8 @@
     border-radius: 0.5rem;
     border: 2px solid white;
     padding: 0.5rem;
+
+    p { margin: 0;}
    }
   .boss-area { grid-area: 3 / 1 / 5 / 2 ; }
   .team-area {
